댓글 하는법 근데 안나옴

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=simple_board2
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.ap-chuncheon-1.oraclecloud.com))(connect_data=(service_name=g405f7fac99c697_dcgy47zxe2jxk0ce_high.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
-spring.datasource.username=minji
-spring.datasource.password=Spring1234@!
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:XE
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1521)(host=adb.ap-chuncheon-1.oraclecloud.com))(connect_data=(service_name=g405f7fac99c697_dcgy47zxe2jxk0ce_high.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
+spring.datasource.username=c##spring
+spring.datasource.password=1234
 # ??? ?? ???? ???? ???? ???? ?? ??
 mybatis.configuration.map-underscore-to-camel-case=true
 
